[workspace.package]
license = "GPL-3.0"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
homepage = "https://github.com/OnChainTemplars/blacksmithy"
repository = "https://github.com/OnChainTemplars/blacksmithy"
edition = "2024"

[workspace]
default-members = ["runtime"]
members = ["node", "runtime"]
resolver = "2"

[workspace.dependencies]
blacksmithy-runtime = { path = "./runtime", default-features = false }
clap = { version = "4.5.13" }
codec = { version = "3.7.5", default-features = false, package = "parity-scale-codec" }
docify = { version = "0.2.9" }
futures = { version = "0.3.31" }
futures-timer = { version = "3.0.2" }
jsonrpsee = { version = "0.24.10" }
polkadot-sdk = { version = "2509.0.0", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
serde_json = { version = "1.0.132", default-features = false }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
