[package]
name = "blacksmithy-runtime"
description = "There is always work going on here"
version = "0.1.0"
license = "GPL-3.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
codec = { workspace = true }
polkadot-sdk = { workspace = true, features = [
	"pallet-balances",
	"pallet-sudo",
	"pallet-timestamp",
	"pallet-transaction-payment",
	"pallet-transaction-payment-rpc-runtime-api",
	"runtime",
] }
scale-info = { workspace = true }
serde_json = { workspace = true, default-features = false, features = [
	"alloc",
] }

[build-dependencies]
polkadot-sdk = { optional = true, workspace = true, features = [
	"substrate-wasm-builder",
] }

[features]
default = ["std"]
std = ["codec/std", "polkadot-sdk/std", "scale-info/std", "serde_json/std"]
